framec_tests/language_specific/typescript/v3_outline/negative/test_action_with_frame.frm
@target typescript

action B
{
-> $Go(1)
}

